# mcp-http

./: README.md  example.md  pyproject.toml  server.py  setup.py  testapi.py
doc/: readme.md
src/mcp_http/: server.py
