[project]
name = "mcp-http"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Admin", email = "lighttomorrow2012@hotmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp[cli]>=2.3.1",
    "httpx>=0.28.1",
]

[project.scripts]
mcp_http = "mcp_http.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
